--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ email-validator>=2.1.0.post1
 geoip2>=4.7.0
 firebase-admin>=6.5.0
 Jinja2>=3.1.4
+
+# Signature verification per Standard Webhooks
+standardwebhooks>=0.4.1
