--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ fastapi>=0.110.0
 uvicorn[standard]>=0.23.0
 pydantic>=2.0.0
 email-validator>=2.1.0.post1
+dnspython>=2.6.1
 geoip2>=4.7.0
 firebase-admin>=6.5.0
 Jinja2>=3.1.4
