--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ uvicorn[standard]>=0.23.0
 pydantic>=2.0.0
 email-validator>=2.1.0.post1
 dnspython>=2.6.1
-geoip2>=4.7.0
+ip2geotools>=0.1.6
 firebase-admin>=6.5.0
 Jinja2>=3.1.4
 
