--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dnspython>=2.6.1
 ip2geotools>=0.1.6
 firebase-admin>=6.5.0
 Jinja2>=3.1.4
+bleach>=6.1.0
 
 # Signature verification per Standard Webhooks
 standardwebhooks>=0.4.1
