--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ ip2geotools>=0.1.6
 firebase-admin>=6.5.0
 Jinja2>=3.1.4
 bleach>=6.1.0
+# Disposable email domains list (5000+)
+disposable-email-domains>=0.0.89
 
 # Signature verification per Standard Webhooks
 standardwebhooks>=0.4.1
