--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,5 @@ standardwebhooks>=0.4.1
 # Email provider SDK (Resend)
 resend>=2.0.0
 slowapi>=0.1.8
+# IP-based signup throttling (server-side)
+fastratelimiter>=0.0.4
