--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,5 @@ python-whois>=0.8.0
 boto3>=1.34.0
 # Translation providers wrapper
 deep-translator>=1.11.4
+# For encrypting tokens and SMTP credentials (Fernet)
+cryptography>=41.0.0
