--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,6 @@ boto3>=1.34.0
 deep-translator>=1.11.4
 # For encrypting tokens and SMTP credentials (Fernet)
 cryptography>=41.0.0
+# URL parsing and validation for malicious link scanning
+tldextract>=5.1.2
+validators>=0.22.0
