--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,5 @@ cryptography>=41.0.0
 # URL parsing and validation for malicious link scanning
 tldextract>=5.1.2
 validators>=0.22.0
+# VirusTotal official Python client for malware scanning
+vt-py>=0.18.0
