--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,6 @@ cryptography>=41.0.0
 # URL parsing and validation for malicious link scanning
 tldextract>=5.1.2
 validators>=0.22.0
+# Google Safe Browsing client (using stdlib HTTP, no extra lib needed)
+# Ensure public suffix list updates for tldextract in production
+publicsuffixlist>=0.10.0
