--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ pydantic>=2.0.0
 email-validator>=2.1.0.post1
 dnspython>=2.6.1
 
+# Async PostgreSQL driver for SQLAlchemy
+asyncpg>=0.29.0
+
 # ip2geotools kept as fallback; remove if you fully deprecate it
 ip2geotools>=0.1.6
 # MaxMind GeoIP2 database reader for local GeoLite2 lookups
